force-app/main/default/objects/Case_Pillar_Mapping__c/Case_Pillar_Mapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This will contain mappings for the Skill fields on Case to the Pillar &amp; Sub-Pillar values.</description>
    <label>Case Pillar Mapping</label>
</CustomObject>