force-app/main/default/objects/Case_Pillar_Mapping__c/fields/Pillar__c.field-meta.xml
<CustomField>
    <fullName>Pillar__c</fullName>
    <label>Pillar</label>
    <length>255</length>
    <type>Text</type>
</CustomField>