force-app/main/default/objects/Case_Pillar_Mapping__c/fields/Sub_Pillar__c.field-meta.xml
<CustomField>
    <fullName>Sub_Pillar__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sub-Pillar</label>
    <length>255</length>
    <type>Text</type>
</CustomField>