force-app/main/default/objects/Case_Pillar_Mapping__c/fields/WFM_Queue_Tag__c.field-meta.xml
<CustomField>
    <fullName>WFM_Queue_Tag__c</fullName>
    <label>WFM Queue Tag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>